# moka-util

./: .gitignore  README.md  pyproject.toml
moka_util/data_processing/: data_cleaning.py  process_to_jurnal.py
moka_util/query_web/: errors.py  requests_util.py
notebook/: get_sales_data.ipynb
tests/: test_data_processing.py  test_query_sales_data.py
